Display alternate sites on no_user page too
Since autolab.andrew.cmu.edu isn't going to have lots of courses
or course users, most people will see the no_user page, not the
course index page. So move the display into a partial and
render it both places

--- a/app/views/home/no_user.html.erb
+++ b/app/views/home/no_user.html.erb
@@ -6,6 +6,4 @@ staff to be added to your course. The course rosters are not synced from the
 HUB, so this error is very common (and easily fixed) if you were added to the 
 course recently or are on a waitlist.</p>
 
-<div id="publicCourse">
-<%= render :partial => "signUp", :layout => false %>
-</div>
+<%= render :partial => "topannounce" %>
