--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -44,15 +44,10 @@ experience on Autolab amazing. Here are some frequently asked questions:
   <div class="col l6">
     <h3>I don't have a GitHub account or I'd like a little bit more personalized bug resolution experience. Is there an alternative to the issue tracker?</h3>
     <p>
-    In this case, feel free to send an email to the Autolab developers mailing list,
+    In this case, feel free to send an email to Autolab Support:
     </p>
     <p>
-		<b><%= Rails.configuration.school['support_email'] %></b>
-    </p>
-    <p>
-    We get a good deal of traffic on this list, but we'll make our best effort to
-    get back to as soon as we can. Make sure to read below for what makes a good
-    error report.
+    <b>autolab-help [at] andrew.cmu.edu</b>
     </p>
   </div>
   <div class="col l6">
