Direct user support queries to autolab-help
Instead of the dev list, direct user support queries to
autolab-help@andrew.cmu.edu which will be read by Computing Services
or the Eberly Center before possibly being sent to the dev list.

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -42,17 +42,12 @@ experience on Autolab amazing. Here are some frequently asked questions:
     </p>
   </div>
   <div class="col-md-6">
-    <h3>I don't have a GitHub account or I'd like a little bit more personalized bug resolution experience. Is there an alternative to the issue tracker?</h3>
+    <h3>I don't have a GitHub account or I'd like a little bit more personalized issue resolution experience. Is there an alternative to the issue tracker?</h3>
     <p>
-    In this case, feel free to send an email to the Autolab developers mailing list,
+    In this case, feel free to send an email to Autolab Support:
     </p>
     <p>
-    <b>autolab-dev [at] andrew.cmu.edu</b>
-    </p>
-    <p>
-    We get a good deal of traffic on this list, but we'll make our best effort to
-    get back to as soon as we can. Make sure to read below for what makes a good
-    error report.
+    <b>autolab-help [at] andrew.cmu.edu</b>
     </p>
   </div>
   <div class="col-md-6">
