--- a/app/views/assessments/_gradesheet.html.erb
+++ b/app/views/assessments/_gradesheet.html.erb
@@ -127,6 +127,9 @@
     // templates
     $col_name_template = jQuery('#col_name_template');
     $col_prob_template = jQuery('#col_prob_template');
+
+    /*** local cache ***/
+    cache = {};
   </script>
 
   <%= javascript_include_tag "gradesheet" %>
