Remove specific courses from pointer to CS autolab
15-213 for summer 2016 is using CMU Autolab, so update the text
that suggests students to use CS autolab for that course.

--- a/app/views/home/_topannounce.html.erb
+++ b/app/views/home/_topannounce.html.erb
@@ -13,8 +13,8 @@
 <h1>Other Courses</h1>
 <div class="container">
 <div class="col-md-6">
-<p>A few courses are still hosted at Autolab.cs.cmu.edu. If you are a 15-213
-or 15/18-746 student or instructor, please proceed to the CS autolab server to use that content.<p>
+<p>Archived content for most 2015 Autolab courses is hosted at Autolab.cs.cmu.edu. In addition, the Spring 2016 archives of 15-213 and 15-312 are located there</p>
+<p>Some courses (e.g. 15/18-746) may be hosted there in the future instead of on this server.</p>
 <%= link_to 'CS Autolab', 'https://autolab.cs.cmu.edu', class: 'btn main' %>
 </div>
 <div class="col-md-6">
