Sort gradesheet score columns numerically hotfix
I don't know enough jquery to know if the cast to number can
always be done safely, so I'm only casting to number when sorting

--- a/app/views/assessments/_gradesheet.html.erb
+++ b/app/views/assessments/_gradesheet.html.erb
@@ -128,6 +128,7 @@
               // if doesn't exist in cache (no update yet), then use original value
               score = problem['score'];
             }
+            if (type == "sort" && score != "" && score != "-") return Number(score);
             return score;
           } },
       <% end %>
