Display late days in submission tables
Fix bogus HTML that prevented late days usage being displayed in the
submission history tables

--- a/app/views/assessments/_submission_summary_row.html.erb
+++ b/app/views/assessments/_submission_summary_row.html.erb
@@ -90,9 +90,7 @@
   <% end %>
 
   <% if @course.grace_days >= 0 then %>
-    <td title="Submitted <%= submission.days_late %> days late" >
-      </nobr>
-    </td>
+    <td>Submitted <%= submission.days_late %> days late</td>
   <% end %>
 
   <% if @assessment.version_penalty? %>
