changed text for remaining submissions to account for version penalties (#1024)
* changed text for remaining submissions to account for version penalties

* fixed version threshold check to use the course's default value if needed

* moved view logic into helper module

--- a/app/views/assessments/_handin_form.html.erb
+++ b/app/views/assessments/_handin_form.html.erb
@@ -212,17 +212,9 @@
               <% end %>
             </div>
             <div class="row">
-              <% if @assessment.max_submissions != -1 then %>
-                <% numSubmissions = @submissions.size %>
-                <% if numSubmissions > @assessment.max_submissions then %>
-                  <% numSubmissions = 0 %>
-                <% else %>
-                  <% numSubmissions = @assessment.max_submissions - numSubmissions %>
-                <% end %>
-                <div class="smallText col s6 offset-s6 m4 offset-m8 center-align" style="padding-top: 6px">&nbsp;&nbsp;(<%= numSubmissions %> submissions left)</div>
-              <% else %>
-                <div class="smallText col s6 offset-s6 m4 offset-m8 center-align" style="padding-top: 6px">(&nbsp;&#x221e;&nbsp;&nbsp;submissions left)</div>
-              <% end %>
+              <div class="smallText col s6 offset-s6 m4 offset-m8 center-align" style="padding-top: 6px">
+                <%= remainingSubmissionsMsg(@submissions, @assessment) %>  
+              </div>
             </div>
           <% end %>
         <% end %>
