Use javascript escaping for hash keys
For values used as javascript hash keys, use escape_javascript (j function)
instead of relying on default html entity encoding.

--- a/app/views/extensions/index.html.erb
+++ b/app/views/extensions/index.html.erb
@@ -7,7 +7,7 @@
       /* match user name/email with cud_id */
       userData = {
         <% @usersEncoded.each do |k,v| %>
-          "<%= k %>": "<%= v %>",
+          "<%= j k.html_safe %>": "<%= v %>",
         <% end %>
       };
 
@@ -17,7 +17,7 @@
       $studentAutocompleteField.autocomplete({
         data: {
           <% @users.each do |k,v| %>
-            "<%= k %>": null,
+            "<%= j k.html_safe %>": null,
           <% end %>
         }
       });
