--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -8,7 +8,7 @@
     jQuery(function() {
       userData = {
         <% @cuds.each do |k,v| %>
-          "<%= k %>": "<%= v %>",
+          "<%= j k.html_safe %>": "<%= v %>",
         <% end %>
       };
 
@@ -18,7 +18,7 @@
       $studentAutocompleteField.autocomplete({
         data: {
           <% @cuds.each do |k,v| %>
-            "<%= k %>": null,
+            "<%= j k.html_safe %>": null,
           <% end %>
         }
       });
