--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -3,7 +3,7 @@
     jQuery(function() {
       userData = {
         <% @cuds.each do |k,v| %>
-          "<%= k %>": "<%= v %>",
+          "<%= j k.html_safe %>": "<%= v %>",
         <% end %>
       };
 
@@ -13,7 +13,7 @@
       $studentAutocompleteField.autocomplete({
         data: {
           <% @cuds.each do |k,v| %>
-            "<%= k %>": null,
+            "<%= j k.html_safe %>": null,
           <% end %>
         }
       });
