--- a/app/views/home/_topannounce.html.erb
+++ b/app/views/home/_topannounce.html.erb
@@ -14,12 +14,12 @@
 <h1>Other Courses</h1>
 <div class="row">
 <div class="col s12 m6">
-<p>Archived content for most 2015 Autolab courses is hosted at Autolab.cs.cmu.edu. In addition, the Spring 2016 archives of 15-213 and 15-312 are located there</p>
+<%# <p>Archived content for most 2015 Autolab courses is hosted at Autolab.cs.cmu.edu. In addition, the Spring 2016 archives of 15-213 and 15-312 are located there</p>
 <p>Some courses (e.g. 15/18-746) may be hosted there in the future instead of on this server.</p>
 <%= link_to 'CS Autolab', 'https://autolab.cs.cmu.edu', class: 'waves-effect waves-light btn main' %>
 </div>
 <div class="col s12 m6">
-<p>Courses on Autolab prior to Spring 2015 are not currently available</p>
+<p>Courses on Autolab prior to Spring 2016 are not currently available</p>
 <%#
 <p>Courses on Autolab prior to Spring 2015 are viewable at oldautolab.cs.cmu.edu.</p> %>
 <%#= link_to 'Old Autolab Courses', 'https://oldautolab.cs.cmu.edu', class: 'waves-effect waves-light btn main' %>
