Use different variable names in submissions#new
The submissions#new controller used the @cuds variable to pass two
different types of data to the view depending on whether the users
were already known or were going to be looked up in the form.

Instead, Use @user_map for the autocomplete mapping, and @cuds for
the pre-selected list of users

--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -2,7 +2,7 @@
   <script type="application/javascript">
     jQuery(function() {
       userData = {
-        <% @cuds.each do |k,v| %>
+        <% @user_map.each do |k,v| %>
           "<%= j k.html_safe %>": "<%= v %>",
         <% end %>
       };
@@ -12,7 +12,7 @@
       $hiddenCUDField = $('#submission_course_user_datum_id');
       $studentAutocompleteField.autocomplete({
         data: {
-          <% @cuds.each do |k,v| %>
+          <% @user_map.each do |k,v| %>
             "<%= j k.html_safe %>": null,
           <% end %>
         }
