fix broken released button

--- a/app/views/assessments/viewGradesheet.html.erb
+++ b/app/views/assessments/viewGradesheet.html.erb
@@ -223,7 +223,9 @@
           <div>
             <span class="left">
               <b>Released</b>
-              <input class="released" type="checkbox" />
+              <label>
+                <input class="released" type="checkbox" />
+              </label>
             </span>
             <span class="save_box">
               <span class="saving">Saving...</span>
