--- a/app/views/components/_autocomplete.html.erb
+++ b/app/views/components/_autocomplete.html.erb
@@ -1,5 +1,5 @@
 <script type="application/javascript">
-  /* requires @usersEncoded and @users to be set, i.e. via retrieve_autocompletion_data! */
+  /* requires @usersEncoded and @users to be set, i.e. via Course.get_autocomplete_data */
   jQuery(function() {
     /* match user name/email with cud_id */
     /* escape_javascript prevents issues with backslashes in names, etc. */
